2007-12-05  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* gst/mpegtsparse/mpegtspacketizer.c:
	* gst/mpegtsparse/mpegtsparse.c:
	A sub table is identified by the pair table_id and 
	sub_table_identifier, not by pid. So hash with that.
	* sys/dvb/dvbbasebin.c:
	Make sure initial pids are added properly to filter,

2007-12-05  Andy Wingo  <wingo@pobox.com>

	* gst/switch/gstswitch.c (gst_switch_set_property): Don't push
	buffers from app thread when unsetting `queue-buffers', it's
	dangerous and the chain function will do it for us anyway.

2007-12-04  Edgard Lima  <edgard.lima@indt.org.br>

	* ext/metadata/metadatamuxjpeg.c: (metadatamux_wrap_chunk),
	(metadatamux_jpeg_lazy_update):
	* ext/metadata/metadataparsejpeg.c: (metadataparse_jpeg_parse),
	(metadataparse_jpeg_reading):
	  Now compiles even when libiptc is missing.

2007-12-04  Edgard Lima  <edgard.lima@indt.org.br>

	* ext/metadata/gstmetadatamux.c:
	* ext/metadata/gstmetadatamux.h:
	* ext/metadata/gstmetadataparse.c:
	* ext/metadata/gstmetadataparse.h:
	* ext/metadata/metadata.c:
	* ext/metadata/metadata.h:
	* ext/metadata/metadatamuxjpeg.c:
	* ext/metadata/metadatamuxjpeg.h:
	* ext/metadata/metadatamuxpng.c:
	* ext/metadata/metadatamuxpng.h:
	  Fixed element properties and now muxer writes to png also.

2007-12-03  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* gst/mpegtsparse/Makefile.am:
	* gst/mpegtsparse/mpegtspacketizer.c:
	* gst/mpegtsparse/mpegtsparse.c:
	Remove signals for pat, pmt, nit, eit, sdt. Replace with bus
	messages.
	* sys/dvb/dvbbasebin.c:
	Instead of attaching to signals, use the bus messages.
	Also fix up so the dvbsrc starts only outputting the info tables
	like PAT, CAT, NIT, SDT, EIT instead of the whole ts.

2007-12-03  Edgard Lima  <edgard.lima@indt.org.br>

	* ext/metadata/gstmetadatamux.c:
	* ext/metadata/gstmetadatamux.h:
	* ext/metadata/metadataexif.c:
	* ext/metadata/metadataexif.h:
	* ext/metadata/metadataiptc.c:
	* ext/metadata/metadataiptc.h: