@@ -55,11 +55,12 @@ metadataparse_iptc_tag_list_add (GstTagList * taglist, GstTagMergeMode mode,
     GstAdapter * adapter, MetadataTagMapping mapping)
 {
 
-  GST_LOG ("IPTC not defined, here I should send just one tag as whole chunk");
-
-  if (mapping & METADATA_TAG_MAP_WHOLECHUNK)
+  if (mapping & METADATA_TAG_MAP_WHOLECHUNK) {
+    GST_LOG
+        ("IPTC not defined, here I should send just one tag as whole chunk");
     metadataparse_util_tag_list_add_chunk (taglist, mode, GST_TAG_IPTC,
         adapter);
+  }
 
 }
 
